Fixing two new caught issues
`collections/show.php`:
- Closing DIV placed outside of if/else block could cause HTML
validation error (orphaned `</div>`)

`css/style.css`:
- Fixes potential layout issue with placement/arrangement of
popover-form labels for advanced search (labels and related checkboxes
now appear correctly aligned (instead of staggered due to float)

`search/search-form.php`:
- Fixed one spot causing HTML validation errors from duplicate IDs
(there are likely more)

--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,7 @@ margin-right: 5px;
 }
 .popover-form label {
     font-weight: 400;
+    float:none;
 }
 .popover-form legend {
     font-size: inherit;
